--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Francilyn's Portfolio - Home</title>
 		<link href="design.css" rel="stylesheet" type="text/css"/>	
-        <link rel="shortcut icon" href="images/franci-logo-1.png"/>
+        <link rel="shortcut icon" href="images/franci-logo.png"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
 
@@ -13,10 +13,10 @@
 		<div class="menu">
 			<header>
 				<nav id="TOP">
-				  <img src = "images/franci-logo-1.png" alt = "Franci Logo" >
-				  <a class="Link" href = "" title = "Projects">CONTACTS</a>
-				  <a class="Link" href = "" title = "Projects">PROJECTS</a>
-				  <a class="Link-Home" href = "home.html" title = "Home">HOME</a>
+				  <img src = "images/franci-logo.png" alt = "Franci Logo" class="logo" >
+                    <a class="Link" href = "" title = "Projects">CONTACTS</a>
+				    <a class="Link" href = "project.html" title = "Projects">PROJECTS</a>
+				    <a class="Link-Home" href = "index.html" title = "Home">HOME</a>
 				</nav>
 			</header>
 		</div>
@@ -47,87 +47,11 @@
                         of Science in Technology Major in Web Development at Holy Angel University. I believe in the power of continuous learning, adaptability, 
                         and the pursuit of excellence. Through this portfolio, I aim to convey not just what I've done but the spirit with which I approach challenges. 
                     </p>
-                    <a href="#" class="view-work-btn">View Work</a>
+                    <a href="project.html" class="view-work-btn">View Work</a>
                 </div>
             </div>
         </div>
 
-        <!--My Projects-->
-        <div class="projects">
-            <h1 class="heading">MY PROJECTS</h1>
-            <p class="proj-desc">As you navigate through these digital pages, you'll get a glimpse into my professional and academic experiences, showcasing the diverse skills I've acquired along the way. 
-                From projects that pushed my creative boundaries to achievements that stand as milestones in my career, each entry tells a story of dedication and growth.</p>
-
-            <div class="box-container">
-                <div class="box">
-                    <img src="images/proj-1.png" alt="FranciTrip">
-                    <h1>FranciTrip</h1>
-                    <p>I proudly present my latest website project crafted with WordPress. This platform has been instrumental in honing my web development abilities.</p>
-                    <p class="skill-title">Wordpress Skills</p>
-                    <div class="skill-container">
-                    <div class="skills wordp">75%</div>
-                    </div>
-                    <a href="https://estanislaofrancilyn.wordpress.com/" class="btn">Click to View Website</a>
-                </div>
-
-                <div class="box">
-                    <img src="images/proj-2.png" alt="G Fitness">
-                    <h1>G Fitness Health Club</h1>
-                    <p>This website stands as a significant milestone achieved during my second year in college. Through collaborative efforts, we developed a website to meet the specific needs of our client. </p>
-                    <p class="skill-title">WordPress SKills</p>
-                    <div class="skill-container">
-                    <div class="skills wordpr">90%</div>
-                    </div>
-                    <a href="https://gfitnesshealthclub.com/" class="btn">Click to View Website</a>
-                </div>
-
-                <div class="box">
-                    <img src="images/proj-3.png" alt="GoComiX">
-                    <h1>GoComix</h1>
-                    <p>My another project is the GoComix Website wherein we were tasked to create a responsive website that includes the use of PHP and MySql. </p>
-                    <p class="skill-title">HTML, CSS, JavaScript, PHP, MySQL</p>
-                    <div class="skill-container">
-                    <div class="skills html">85%</div>
-                    </div>
-                    <a href="images/proj-3.PNG" class="btn">Click to View Image</a>
-                </div>
-
-                <div class="box">
-                    <img src="images/proj-4.png" alt="Genshin Impact">
-                    <h1>Genshin Impact</h1>
-                    <p>This inaugural project marks the genesis of my web development journey, where I applied my foundational skills in HTML, CSS, and Javascript. </p>
-                    <p class="skill-title">Designing SKills</p>
-                    <div class="skill-container">
-                    <div class="skills css">90%</div>
-                    </div>
-                    <a href="images/proj-4.PNG" class="btn">Click to View Image</a>
-                </div>
-
-                <div class="box">
-                    <img src="images/proj-5.png" alt="Star Drama">
-                    <h1>Star Drama</h1>
-                    <p>Through collaborative efforts with my groupmates, this project served as a pivotal moment in enhancing my database development skills. </p>
-                    <p class="skill-title">MongoDB Skills</p>
-                    <div class="skill-container">
-                    <div class="skills db">80%</div>
-                    </div>
-                    <a href="images/proj-5.PNG" class="btn">Click to View Image</a>
-                </div>
-
-                <div class="box">
-                    <img src="images/proj-6.png" alt="Vonshon">
-                    <h1>Vonshon</h1>
-                    <p>Engaging in this project significantly augmented my expertise in utilizing Jira and working with APIs. </p>
-                    <p class="skill-title">Time Management</p>
-                    <div class="skill-container">
-                    <div class="skills time">90%</div>
-                    </div>
-                    <a href="images/proj-6.png" class="btn">Click to View Image</a>
-                </div>
-
-            </div>
-
-        </div>
 
         
 
