--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
                             <a href="https://www.instagram.com/francilynnnn/"><i class='bx bxl-instagram-alt bx-tada'></i></a>
                             <a href="https://twitter.com/Francilynnn"><i class='bx bxl-twitter bx-tada'></i></a> 
                         </div>
-                        <a href="files/Estanislao-Resume.pdf" download class="dl-rs-1-btn">Download Resume</a>
+                        <a href="files/Estanislao-Resume-Job.pdf" download class="dl-rs-1-btn">Download Resume</a>
                     </div>
                     <div class="contact-right"></div>
                         <form name="submit-to-google-sheet">
