--- a/services.html
+++ b/services.html
@@ -48,8 +48,8 @@
                 </div>
             </div>
 
-            <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
-                    <div class="elfsight-app-0303dbc0-0c71-4040-9638-0bb4809ad2a4" data-elfsight-app-lazy></div>
+            <!-- <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+                    <div class="elfsight-app-0303dbc0-0c71-4040-9638-0bb4809ad2a4" data-elfsight-app-lazy></div> -->
 
             <div class="testi">
                 <h1 class="serv-title-1">TESTIMONIALS</h1>
